objects/TAV4__Sales_Rep__c.object
<CustomObject>
    <fields>
        <fullName>TAV4__Alignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alignment</label>
        <referenceTo>TAV4__Alignment__c</referenceTo>
        <relationshipLabel>Sales Reps</relationshipLabel>
        <relationshipName>Sales_Reps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TAV4__Is_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates that this position is not assigned individual accounts. Records with this checked will not be made available for territory assignment.</inlineHelpText>
        <label>Is Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TAV4__Latitude__c</fullName>
        <formula>TAV4__User__r.Latitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAV4__Longitude__c</fullName>
        <formula>TAV4__User__r.Longitude</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TAV4__PostalCode__c</fullName>
        <formula>TAV4__User__r.PostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Postal Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TAV4__Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Sales Rep</fullName>
                </value>
                <value>
                    <fullName>Sales Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TAV4__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the user who is filling this position.</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Rep</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Sales Rep</label>
    <listViews>
        <fullName>TAV4__All</fullName>
        <columns>TAV4__Alignment__c</columns>
        <columns>NAME</columns>
        <columns>TAV4__Role__c</columns>
        <columns>TAV4__User__c</columns>
        <columns>TAV4__Is_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Daniel Bennett</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Sales Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Reps</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>